huske list first version is compelete

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">huskeliste</string>
+    <string name="legge_til">Legge til</string>
+    <string name="appHelp">Skriv oppgave</string>
 </resources>
